# Penrose

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
dashboard/: calibration.json  connections.json  index.html  live_server.py  write_api.py
docs/: ADAPTERS.md  DATA_ACQUISITION_STANDARD.md  DATA_CONTRACT.md  FPES_STANDARD_PAPER.md  GATES.md  OPERATING.md  PENROSE_SYSTEMS_PAPER.md  STRESS_TESTING.md  THE_PENROSE_EDGE.md  WORKED_EXAMPLE.md
docs/assets/: system-diagram.mmd
examples/reference_loader/: README.md  catalog.yaml  loader.py
modules/crypto_funding_carry/: impl.py  module.yaml
modules/macro_vol_btc/: impl.py  module.yaml
notebooks/: penrose_demo.ipynb
scripts/: _calib_common.py  brain_connections.py  calibration_breadth.py  calibration_hypothesis_creation.py  calibration_injection.py  calibration_nulls.py  calibration_persistence.py  calibration_placebo.py  calibration_power_mining.py  calibration_sensitivity.py  calibration_synthesizer.py  calibration_tail.py  check_retrieval_portable.py  cz_decay.py  cz_referee.py  eval_suite.py  fetch_cz_data.py  migrate_holdout_state.py  rdagent_referee.py  reset.py  restore_decisions.py  stage0_funding_carry.py  worked_example_process_conditional.py
tests/: test_audit.py  test_auto_source.py  test_brainstore.py  test_catalog_domain_awareness.py  test_claim_routing_6g.py  test_cli.py  test_commons.py  test_composite_families.py  test_contrastive_principles.py  test_cpcv.py  test_cross_run_distillation.py  test_cross_sectional_sort.py  test_data_contract.py  test_deflation.py  test_deflation_cohort.py  test_dream.py  test_engine_error_routing.py  test_event_market.py  test_event_study.py  test_factor_spanning.py  test_family_canonicalization.py  test_fee_curve_expected_edge.py  test_fidelity_6c.py  test_fidelity_role_resolution.py  test_fidelity_verifier_provider.py  test_forecast_skill.py  test_formulaic_signal.py  test_funding_drift_regression_5b.py  test_futures_adapter.py  test_generative_freeze.py  test_granularity.py  test_holdout_per_claim.py  test_holdout_psr_gate.py  test_holdout_relocation.py  test_holdout_skip_unreachable.py  test_hypothesis_creation.py  test_impl_fidelity_selfcorrect.py  test_impl_loop_detection.py  test_implausibility_gate.py  test_lookahead_sandbox.py  (+34 more)
(+78 files in other folders)
